syntax = "proto3";

import "google/protobuf/empty.proto";

option go_package = "store/proto";

service StoreService {
    rpc CreateStore(Store) returns (Store) {}
    rpc GetStore(GetStoreRequest) returns (Store) {}
    rpc UpdateStore(Store) returns (google.protobuf.Empty) {}
    rpc DeleteStore(GetStoreRequest) returns (google.protobuf.Empty) {}
}

message Store {
    int64 id = 1;
    string name = 2;
    string description = 3;
    bool is_open = 4;
    repeated string addresses = 5;
}

message GetStoreRequest {
    int64 id = 1;
}
